# NivRenderer

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
NivRenderer/: CMakeLists.txt
NivRenderer/assets/shaders/: customshader_template.glsl  exampleshader.glsl  forwardrender.glsl  lightcube.glsl  lighting.glsl  shadowmap.glsl  shareduniforms.glsl  skybox.glsl
NivRenderer/src/: Base.h  IdManager.h  NivRenderer.cpp  NivRenderer.h
NivRenderer/src/Application/: Event.h  NewScene.cpp  NewScene.h  Project.cpp  Project.h  Scene.cpp  Scene.h  Window.cpp  Window.h
NivRenderer/src/Application/Serialization/: Serializable.h  SerializationManager.cpp  SerializationManager.h
NivRenderer/src/Application/Util/: Instrumentor.h  Math.h
NivRenderer/src/Application/Window/: CameraControllerArcball.cpp  CameraControllerArcball.h  Properties.h  RenderWindow.h  SceneHierarchy.h  Window.cpp  Window.h  WindowEvents.h
NivRenderer/src/Assets/: AssetManager.cpp  AssetManager.h  Assets.h  NewAssetManager.cpp  NewAssetManager.h
NivRenderer/src/Entity/: Asset.h  Component.h  Components.h  ECSRegistry.cpp  ECSRegistry.h  ECSRegistry.tpp  Entity.h  NewECSRegistry.h  NewEcsRegistry.cpp  NewEntity.h  PropertyType.h
NivRenderer/src/Entity/Assets/: Asset.h  AssetManager.cpp  AssetManager.h  MaterialAsset.cpp  MaterialAsset.h  MeshAsset.cpp  MeshAsset.h  ShaderAsset.cpp  ShaderAsset.h  TextureAsset.cpp  TextureAsset.h
NivRenderer/src/Entity/Components/: MaterialComponent.cpp  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  TransformComponent.cpp  TransformComponent.h
NivRenderer/src/Entity/Entities/: CameraObject.h  GameObject.cpp  GameObject.h  LightObject.h  SceneObject.cpp  SceneObject.h  SkyboxObject.cpp  SkyboxObject.h
NivRenderer/src/Rendering/: RenderCommand.h  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  RenderQueue.h  Renderer.cpp  Renderer.h
NivRenderer/src/Rendering/ForwardPipeline/: ForwardPass.cpp  ForwardPass.h
NivRenderer/src/Rendering/OpenGL/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  OpenGLRenderer3D.cpp  OpenGLRenderer3D.h  Texture.cpp  Texture.h  VertexLayout.h
NivRenderer/src/Rendering/Proxy/: CameraProxy.h  LightProxy.h  MaterialProxy.cpp  MaterialProxy.h  MeshProxy.cpp  MeshProxy.h  Proxy.h  ProxyManager.cpp  ProxyManager.h  SceneObjectProxy.cpp  SceneObjectProxy.h  SceneProxy.h  SkyboxProxy.h  TextureProxy.cpp  TextureProxy.h
